feat(ATW-nkx): rivalry heat escalation and feud resolution pipeline (#314)
* feat(ATW-5lb,ATW-6d2): add rivalryId to ProposedSegment and isPLE flag to ShowPlanningContext

- ProposedSegment and AiGeneratedSegmentDTO get an optional rivalryId field so the AI
  can tag which feud a match resolves; prompt JSON schema updated accordingly
- Rivalry listing in the prompt now includes the rivalry Id so the AI can reference it
- ShowPlanningContext/DTO get isPremiumLiveEvent populated from show.isPremiumLiveEvent();
  buildShowPlanningPrompt() adds PLE-specific booking rules block when true
- Add -Djdk.attach.allowAttachSelf=true to Surefire argLine for Mockito ByteBuddy on Java 26
- Tests: rivalryId mapping, prompt schema, isPLE prompt rules present/absent, context propagation

* feat(ATW-f5u): reduce AI prompt noise — filter low-heat rivalries, trim roster, remove duplicate sections

- Filter currentRivalries to heat >= 10 in ShowPlanningDtoMapper; below-threshold rivalries carry no booking signal
- Classify surviving rivalries as MUST_BOOK (10-19), PLE_RESOLUTION_ELIGIBLE (20-29), STIPULATION_REQUIRED (>=30)
- Remove wrestlerHeats from ShowPlanningContext/DTO/prompt — 100% duplicate of currentRivalries data
- Remove recentPromos from ShowPlanningContext/DTO/prompt — promos already present in recentSegments
- Replace fullRoster WrestlerDTO with lean ShowPlanningRosterEntryDTO (name, gender, tier, fans, alignment, injured only)
- Remove PromoBookingService dependency from ShowPlanningService (no longer filters recentPromos)
- Add unit and IT tests covering rivalry filtering, classification labels, and removed prompt sections

* fix(ATW-f5u): add booking instructions for rivalry classification labels in AI prompt

Explain to the AI what MUST_BOOK, PLE_RESOLUTION_ELIGIBLE, and STIPULATION_REQUIRED
mean and what it must do for each — without instructions the labels were decorative noise.

* feat(ATW-tdt): trigger rivalry heat and resolution at adjudication time

When a segmen